[uopdate]: * 微众卡优化
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15496 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/card/templates/card/editor/edit_account_has_permissions.html
+++ b/weapp/card/templates/card/editor/edit_account_has_permissions.html
@@ -96,10 +96,10 @@
 					'owner_ids': idStr.trim(),
 				},
 				success: function() {
-					W.getSuccessHintView().show('设置成功！');
+					W.showHint('success','设置成功！');
 				},
 				error: function() {
-					W.getErrorHintView().show('设置失败！');
+					W.showHint('error','设置失败！');
 				}
 			});
 			return false;
