--- a/weapp/static_v2/js/view/card_channel_detail_view/template.html
+++ b/weapp/static_v2/js/view/card_channel_detail_view/template.html
@@ -70,6 +70,7 @@
 			<label>使用人：</label>
 			<input type="text" class="form-control" id="member_name" name="member_name" value="" />
 		</div>
+		<input type="hidden" class="form-control" id="event_type" name="event_type" value="" />
 	</div>
 </div>
 <div class="xui-btn-group">
