--- a/weapp/static_v2/js/view/card_num_detail_view/template.html
+++ b/weapp/static_v2/js/view/card_num_detail_view/template.html
@@ -47,7 +47,7 @@
 	</div>
 	<div class="xui-col disTc">
 		<div class="xui-i-item xa-num-date">
-			<a herf="javascript:void(0);" class='ml10 xui-dateFilter recently-week-day' data-day=7 style="color:#1262b7">最近7天</a>&nbsp;
+			<a herf="javascript:void(0);" class='ml10 xui-dateFilter recently-week-day' data-day=7>最近7天</a>&nbsp;
 			<a herf="javascript:void(0);" class='xui-dateFilter ml20 recently-week-day' data-day=30>最近30天</a>&nbsp;
 			<a herf="javascript:void(0);" class='xui-dateFilter ml20 recently-week-day' data-day=60>最近60天</a>
 		</div>
