--- a/weapp/card/templates/card/editor/weizoom_num_card_detail.html
+++ b/weapp/card/templates/card/editor/weizoom_num_card_detail.html
@@ -16,7 +16,7 @@
             <li><a href="/card/card_detail/get/?id={{weizoom_card_rule_id}}">{{card_rule_name }}</a></li>
         {% else %}
             <li>
-                <a href="/card/cards_census/get/">数据统计</a>
+                <a href="/card/overview/get/">数据统计</a>
             </li>
             <li><a href="/card/cards_num_census/get/">按卡号统计</a></li>
         {% endif %}
@@ -65,7 +65,7 @@
             data-item-count-per-page="10" 
             data-auto-load="true"
             class="panel-body"
-            data-args='{"card_id":"{{card.weizoom_card_id}}"}'
+            data-args='{"card_id":"{{card.weizoom_card_id}}","start_date": "{{card.start_date}}","end_date": "{{card.end_date}}"}'
         ></div>
     {% else %}
         <div class="xui-emptyBox"><img src="/static_v2/img/editor/empty.png"><span class="ml20">您还没有相关数据！</span></div>
@@ -111,24 +111,52 @@
 {% block js %}
 <script type="text/javascript">
 $(document).ready(function() {
+    var start_date = '{{card.start_date}}';
+    start_date = start_date.split(' ');
+    var end_date = '{{card.end_date}}';
+    end_date = end_date.split(' ');
     var view = new W.view.card.numDetailFilter({
         el: ".xa-numFilterView",
         dataView: $('[data-ui-role="advanced-table"]').data('view'),
-        status:''
+        status:'',
+        start_date: start_date[0],
+        end_date: end_date[0]
     });
     view.$el.bind('end_click', function(){
         DATA_INTERVAL = '';
     });
     // 导出
     $('.panel-body').delegate('.xa-export', 'click', function(event){   
-        var url = '/card/card_detail/export/?card_id={{card.weizoom_card_id}}';
-        if (view.filter_value) {
-            url = url + '&filter_value='+view.filter_value;
-        }
-        W.getSuccessHintView().show("'导出中...'");
-        var $frame=$('<iframe>').hide().attr('src',url);
-        $('body').append($frame);
-        setTimeout(function(){W.getErrorHintView().hide()}, 5000);
+{#        var url = '/card/card_detail/export/?card_id={{card.weizoom_card_id}}&start_date={{card.start_date}}&end_date={{card.end_date}}';#}
+{#        if (view.filter_value) {#}
+{#            url = url + '&filter_value='+view.filter_value;#}
+{#        }#}
+{#        W.getSuccessHintView().show("'导出中...'");#}
+{#        var $frame=$('<iframe>').hide().attr('src',url);#}
+{#        $('body').append($frame);#}
+{#        setTimeout(function(){W.getErrorHintView().hide()}, 5000);#}
+        W.getApi().call({
+            method: 'post',
+            app: 'card',
+            api: 'card_detail/export',
+            args:{card_id:'{{card.weizoom_card_id}}',start_date:'{{card.start_date}}',end_date:'{{card.end_date}}',filter_value:view.filter_value},
+            success: function(data) {
+                $(this).siblings().find('a').remove();
+                var a = $('<a></a>');
+                a.prop({
+                    'href': data.url,
+                    'download': data.filename,
+                    'target': 'view_window'
+                });
+                $(this).after(a);
+                a.get(0).click();
+
+            },
+            error: function(response) {
+                alert('加载失败！请刷新页面重试！');
+            },
+            scope: this
+        });
     });
 });
 </script>
