--- a/weapp/static_v2/js/view/card_detail_list_view/template.html
+++ b/weapp/static_v2/js/view/card_detail_list_view/template.html
@@ -17,6 +17,11 @@
                     <option value="2">已用完</option>
                     <option value="3">未激活</option>
                 </select>
+
+                <label >卡号区间 ：</label>
+                <input type="text" id = "card_num_min" name="card_num_min" onkeyup="value=value.replace(/[^\d]/g,'') "onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))">
+                    -
+                <input type="text" id = "card_num_max" name="card_num_max"onkeyup="value=value.replace(/[^\d]/g,'') "onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))">
             </div>
         </div>
     <div class="xui-btn-group">
