--- a/weapp/static_v2/js/view/card_filter_view/template.html
+++ b/weapp/static_v2/js/view/card_filter_view/template.html
@@ -45,7 +45,10 @@
         </div>
 
         <div class="xui-i-item">
-            <label></label>
+            <label >卡号区间 ：</label>
+            <input type="text" id = "card_num_min" name="card_num_min" onkeyup="value=value.replace(/[^\d]/g,'') "onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))">
+                -
+            <input type="text" id = "card_num_max" name="card_num_max"onkeyup="value=value.replace(/[^\d]/g,'') "onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))">
         </div>
     </div>
 <div class="xui-btn-group">
