--- a/weapp/static_v2/js/view/card_num_census_view/template.html
+++ b/weapp/static_v2/js/view/card_num_census_view/template.html
@@ -18,42 +18,9 @@
 				{{/each}}
 			</select>
 		</div>
-
-	</div>
-	<div class="xui-col disTc">
 		<div class="xui-i-item">
-			<label>筛选日期：</label>
-			<input
-				type="text"
-				class="form-control xui-datePicker"
-				id="start_date"
-				name="start_date"
-			    value=""
-			    readonly="readonly"
-				data-enable-select-time="true"
-				data-ui-role="orderDatepicker"
-			    data-format="yy-mm-dd HH:MM"
-			    data-max="now"/>
-			<span class="ml5 mr5">至</span>
-			<input
-				type="text"
-				class="form-control xui-datePicker"
-				id="end_date"
-				name="end_date"
-			    value=""
-			    readonly="readonly"
-				data-ui-role="orderDatepicker"
-				data-enable-select-time="true"
-			    data-format="yy-mm-dd HH:MM"
-			    data-max="now"
-			    data-min-el="#start_date"/>
-		</div>
-    	<div class="xui-i-item">
-			<label>消费金额：</label>
-			<input type="text" class="form-control" id="low_money" name="low_money" value="" style="width:100px;"/>
-			<span class="xui-span">至</span>
-			<input type="text" class="form-control" id="high_money" name="high_money" value="" style="width:100px;"/>
-
+			<label>使用人：</label>
+			<input type="text" class="form-control" id="member_name" name="member_name" value="" />
 		</div>
 		<div class="xui-i-item">
 			<label>状态：</label>
@@ -66,14 +33,118 @@
 		</div>
 	</div>
 	<div class="xui-col disTc">
-		<div class="xui-i-item xa-num-date">
-			<a herf="javascript:void(0);" class='ml10 xui-dateFilter recently-week-day' data-day=7 style="color:#1262b7">最近7天</a>&nbsp;
-			<a herf="javascript:void(0);" class='xui-dateFilter ml20 recently-week-day' data-day=30>最近30天</a>&nbsp;
-			<a herf="javascript:void(0);" class='xui-dateFilter ml20 recently-week-day' data-day=60>最近60天</a>
+		<div class="xui-i-item">
+			<label>创建日期：</label>
+			<input
+				type="text"
+				class="form-control xui-datePicker"
+				id="create_start_date"
+				name="create_start_date"
+			    value=""
+			    readonly="readonly"
+				data-enable-select-time="true"
+				data-ui-role="orderDatepicker"
+			    data-format="yy-mm-dd HH:MM"
+			    data-max="now"/>
+			<span class="ml5 mr5">至</span>
+			<input
+				type="text"
+				class="form-control xui-datePicker"
+				id="create_end_date"
+				name="create_end_date"
+			    value=""
+			    readonly="readonly"
+				data-ui-role="orderDatepicker"
+				data-enable-select-time="true"
+			    data-format="yy-mm-dd HH:MM"
+			    data-max="now"
+			    data-min-el="#create_start_date"/>
 		</div>
 		<div class="xui-i-item">
-			<label>使用人：</label>
-			<input type="text" class="form-control" id="member_name" name="member_name" value="" />
+			<label>激活日期：</label>
+			<input
+				type="text"
+				class="form-control xui-datePicker"
+				id="activate_start_date"
+				name="activate_start_date"
+			    value=""
+			    readonly="readonly"
+				data-enable-select-time="true"
+				data-ui-role="orderDatepicker"
+			    data-format="yy-mm-dd HH:MM"
+			    data-max="now"/>
+			<span class="ml5 mr5">至</span>
+			<input
+				type="text"
+				class="form-control xui-datePicker"
+				id="activate_end_date"
+				name="activate_end_date"
+			    value=""
+			    readonly="readonly"
+				data-ui-role="orderDatepicker"
+				data-enable-select-time="true"
+			    data-format="yy-mm-dd HH:MM"
+			    data-max="now"
+			    data-min-el="#activate_start_date"/>
+		</div>
+		<div class="xui-i-item">
+			<label>消费日期：</label>
+			<input
+				type="text"
+				class="form-control xui-datePicker"
+				id="use_start_date"
+				name="use_start_date"
+			    value=""
+			    readonly="readonly"
+				data-enable-select-time="true"
+				data-ui-role="orderDatepicker"
+			    data-format="yy-mm-dd HH:MM"
+			    data-max="now"/>
+			<span class="ml5 mr5">至</span>
+			<input
+				type="text"
+				class="form-control xui-datePicker"
+				id="use_end_date"
+				name="use_end_date"
+			    value=""
+			    readonly="readonly"
+				data-ui-role="orderDatepicker"
+				data-enable-select-time="true"
+			    data-format="yy-mm-dd HH:MM"
+			    data-max="now"
+			    data-min-el="#use_start_date"/>
+		</div>
+		<div class="xui-i-item">
+			<label>消费金额：</label>
+			<input type="text" class="form-control" id="low_money" name="low_money" value="" style="width:100px;"/>
+			<span class="xui-span">至</span>
+			<input type="text" class="form-control" id="high_money" name="high_money" value="" style="width:100px;"/>
+
+		</div>
+	</div>
+	<div class="xui-col disTc"> 
+		<div class="xui-i-item xa-num-date">
+			<a herf="javascript:void(0);" class='ml10 xui-dateFilter create_recently-week-day' data-day=7>最近7天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 create_recently-week-day' data-day=30>最近30天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 create_recently-week-day' data-day=60>最近60天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 xa-reset-create-dateFilter' style="color:#1262b7">不限</a>
+		</div>
+		<div class="xui-i-item xa-num-date">
+			<a herf="javascript:void(0);" class='ml10 xui-dateFilter activate_recently-week-day' data-day=7>最近7天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 activate_recently-week-day' data-day=30>最近30天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 activate_recently-week-day' data-day=60>最近60天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 xa-reset-activate-dateFilter' style="color:#1262b7">不限</a>
+		</div>
+		<div class="xui-i-item xa-num-date">
+			<a herf="javascript:void(0);" class='ml10 xui-dateFilter use_recently-week-day' data-day=7>最近7天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 use_recently-week-day' data-day=30>最近30天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 use_recently-week-day' data-day=60>最近60天</a>&nbsp;
+			<a herf="javascript:void(0);" class='xui-dateFilter ml20 xa-reset-use-dateFilter' style="color:#1262b7">不限</a>
+		</div>
+		
+		<div class="xui-i-item">
+			<label>订单号：</label>
+			<input type="text" class="form-control" id="order_id" name="order_id"/>
 		</div>
 	</div>
 </div>
